# radiation-transport

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt
analysis/include/: DataEvent.h  SimulationConfig.h  TestClass.h
analysis/schemas/: simulationConfig.schema.json
analysis/src/: DataSteps.cpp  SimulationConfig.cpp  TestClass.cpp
analysis/test/: CMakeLists.txt
analysis/test/files/: simulation.yaml
analysis/test/src/: SimulationConfigTest.cpp
applications/: CMakeLists.txt
applications/simulation/: CMakeLists.txt  main.cpp
applications/simulation/examples/basic/: simulation.yaml
applications/simulation/examples/decay/: simulation.yaml
applications/simulation/examples/decay/geometry/: box.gdml
applications/simulation/examples/iaxo/: geantino.simulation.yaml  iaxo-supernova.simulation.yaml  iaxolab.cosmic.simulation.yaml  liquidO.simulation.yaml  muons.simulation.yaml  neutrons.simulation.yaml  simulation.yaml
applications/simulation/examples/iaxo/geometry/: babyIAXO-noVeto.gdml  babyIAXO.gdml  iaxo-d1.gdml  iaxo-supernova.gdml
applications/simulation/examples/neutrons/: simulation.yaml
applications/simulation/examples/neutrons/geometry/: detector.gdml
applications/simulation/examples/veto/: simulation.yaml  validate.C
applications/simulation/examples/veto/geometry/: veto.gdml
applications/simulation/include/: ActionInitialization.h  Application.h  DetectorConstruction.h  EventAction.h  Exceptions.h  GlobalManager.h  OutputManager.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  SensitiveDetector.h  StackingAction.h  SteppingAction.h  SteppingVerbose.h  TrackingAction.h
applications/simulation/src/: ActionInitialization.cpp  Application.cpp  DataEvent.cpp  DataSteps.cpp  DataTrack.cpp  DetectorConstruction.cpp  EventAction.cpp  Geant4Event.cpp  Geant4Hits.cpp  Geant4Track.cpp  GlobalManager.cpp  OutputManager.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensitiveDetector.cpp  StackingAction.cpp  SteppingAction.cpp  SteppingVerbose.cpp  TrackingAction.cpp
applications/simulation/test/: CMakeLists.txt
applications/simulation/test/src/: ApplicationTest.cpp  DetectorConstructionTest.cpp  ExamplesTest.cpp
applications/visualization/: CMakeLists.txt  main.cpp
applications/visualization/include/: Viewer.h  Visualization.h
applications/visualization/src/: DataModel.cpp  Geant4.cpp  Viewer.cpp  Visualization.cpp
libraries/Analysis/: CMakeLists.txt
libraries/Analysis/include/: RestSignalProcess.h  VetoAnalysis.h  VetoAnalysisProcess.h  VetoEvent.h
libraries/Analysis/src/: RestSignalProcess.cpp  VetoAnalysis.cpp  VetoAnalysisProcess.cpp  VetoEvent.cpp
libraries/Analysis/test/: CMakeLists.txt
libraries/Analysis/test/src/: VetoAnalysisTest.cpp
libraries/Simulation/: CMakeLists.txt
libraries/Simulation/Config/: CMakeLists.txt
libraries/Simulation/Config/include/: DetectorConstructionConfig.h  PhysicsListConfig.h  SerializableConfig.h  SimulationConfig.h  SourceConfig.h
libraries/Simulation/Config/schemas/: simulationConfig.json  simulationConfig.schema.json
libraries/Simulation/Config/src/: DetectorConstructionConfig.cpp  PhysicsListConfig.cpp  SerializableConfig.cpp  SimulationConfig.cpp  SourceConfig.cpp
libraries/Simulation/Config/test/: CMakeLists.txt
libraries/Simulation/Config/test/files/: detector.yaml  simulation.yaml
libraries/Simulation/Config/test/src/: DetectorConfigTest.cpp  SimulationConfigTest.cpp  SourceConfigGeneratorTest.cpp
libraries/Simulation/EventAnalysis/: CMakeLists.txt
libraries/Simulation/EventAnalysis/include/: VetoEvent.h
libraries/Simulation/EventAnalysis/src/: VetoEvent.cpp
libraries/Simulation/EventGeant4/include/: Geant4Event.h  Geant4EventHeader.h  Geant4GeometryInfo.h  Geant4Hits.h  Geant4Track.h
libraries/Simulation/EventGeant4/src/: Geant4Event.cpp  Geant4EventHeader.cpp  Geant4GeometryInfo.cpp  Geant4Hits.cpp  Geant4Track.cpp
libraries/Simulation/EventGeant4/test/: CMakeLists.txt
libraries/Simulation/EventGeant4/test/src/: EventGeant4Test.cpp
libraries/Simulation/Garfield/: CMakeLists.txt
libraries/Simulation/Garfield/include/: GasGenerator.h  GasManager.h
libraries/Simulation/Garfield/src/: GasGenerator.cpp  GasManager.cpp
libraries/Simulation/Garfield/test/: CMakeLists.txt
libraries/Simulation/Garfield/test/files/: test.gas
libraries/Simulation/Garfield/test/src/: GasTest.cpp
libraries/SimulationData/: CMakeLists.txt
libraries/SimulationData/include/: DataEvent.h  DataEventHeader.h  DataSteps.h  DataTrack.h  SimulationGeometryInfo.h  VetoEvent.h
libraries/SimulationData/schemas/: simulationData.schema.json
libraries/SimulationData/src/: DataEvent.cpp  DataEventHeader.cpp  DataSteps.cpp  DataTrack.cpp  SimulationGeometryInfo.cpp  VetoEvent.cpp
libraries/SimulationData/test/: CMakeLists.txt
libraries/SimulationMetadata/: CMakeLists.txt
libraries/SimulationMetadata/include/: DetectorConfig.h  DetectorConstructionConfig.h  PhysicsListConfig.h  SerializableConfig.h  SimulationConfig.h  SourceConfig.h
libraries/SimulationMetadata/schemas/: simulationMetadata.schema.json
libraries/SimulationMetadata/src/: DetectorConfig.cpp  DetectorConstructionConfig.cpp  PhysicsListConfig.cpp  SerializableConfig.cpp  SimulationConfig.cpp  SourceConfig.cpp
libraries/SimulationMetadata/test/: CMakeLists.txt
libraries/SimulationMetadata/test/files/: detector.yaml  source.yaml
libraries/SimulationMetadata/test/files/angular/: flux.yaml
libraries/SimulationMetadata/test/files/energies/: mono.yaml
libraries/SimulationMetadata/test/files/generators/: disk.yaml  plane.yaml  point.yaml  rectangle.yaml  square.yaml
libraries/SimulationMetadata/test/src/: DetectorConfigTest.cpp  SimulationConfigTest.cpp  SourceConfigAngularTest.cpp  SourceConfigEnergyTest.cpp  SourceConfigGeneratorTest.cpp  SourceConfigTest.cpp
simulation/: CMakeLists.txt  main.cpp
simulation/include/: Application.h
simulation/src/: Application.cpp
simulation/test/: CMakeLists.txt
simulation/test/src/: ApplicationTest.cpp
(+37 files in other folders)
